[package]
name = "binaryutils"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "port of pmmp/BinaryUtils"
homepage = "https://github.com/djdisodo/binaryutils-rust"
documentaion = "README.md"
repository = "https://github.com/djdisodo/binaryutils-rust.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "0.3.11"
